<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.unadmexico.reyes.activofijo.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_icssa"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        app:layout_constraintLeft_toRightOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icssa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        android:id="@+id/textView"
        app:layout_constraintHorizontal_bias="0.503" />

    <Button
        android:id="@+id/btnAssetsList"
        android:layout_width="370dp"
        android:layout_height="66dp"
        android:text="@string/Assets_list"
        android:theme="@style/RaisedButton"
        tools:layout_editor_absoluteX="6dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnNewAsset"
        android:layout_width="368dp"
        android:layout_height="67dp"
        android:text="@string/New_asset"
        android:theme="@style/RaisedButton"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/btnAssetsList" />



</android.support.constraint.ConstraintLayout>
