<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context="mx.unadmexico.reyes.activofijo.NuevoActivo">

    <TextView
        android:id="@+id/tvNumAct"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/num_activo"
        android:textSize="@dimen/label_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/lbl_margin_top"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txtNumAct"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txt_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/tvNumAct"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/tvCateg"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/categ"
        android:textSize="@dimen/label_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/lbl_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/txtNumAct"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txtCateg"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_size"
        android:textStyle="normal"
        android:layout_marginTop="@dimen/txt_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/tvCateg"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/tvDesCorta"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/desc_corta"
        android:textSize="@dimen/label_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/lbl_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/txtCateg"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txtDesCorta"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_size"
        android:textStyle="normal"
        android:layout_marginTop="@dimen/txt_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/tvDesCorta"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/tvDesLarga"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/desc_larga"
        android:textSize="@dimen/label_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/lbl_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/txtDesCorta"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txtDesLarga"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_size"
        android:textStyle="normal"
        android:layout_marginTop="@dimen/txt_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/tvDesLarga"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/tvMarca"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/marca"
        android:textSize="@dimen/label_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/lbl_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/txtDesLarga"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_size"
        android:textStyle="normal"
        android:layout_marginTop="@dimen/txt_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/tvMarca"
        tools:layout_editor_absoluteX="8dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_save_48"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        app:layout_constraintRight_toRightOf="parent" />



</android.support.constraint.ConstraintLayout>
