<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.unadmexico.reyes.activofijo.DetalleActivo">

    <TextView
        android:id="@+id/lblNumAct"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/num_activo"
        android:textSize="@dimen/label_size"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/lbl_margin_top" />

    <TextView
        android:id="@+id/tvNumAct"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="Num Act"
        android:textSize="@dimen/txt_size"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="@dimen/txt_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/lblNumAct" />

    <TextView
        android:id="@+id/lblCateg"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/categ"
        android:textSize="@dimen/label_size"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="@dimen/lbl_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/tvNumAct" />

    <TextView
        android:id="@+id/tvCateg"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="Categ"
        android:textSize="@dimen/txt_size"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="@dimen/txt_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/lblCateg" />

    <TextView
        android:id="@+id/lblDesCorta"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/desc_corta"
        android:textSize="@dimen/label_size"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="@dimen/lbl_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/tvCateg" />

    <TextView
        android:id="@+id/tvDesCorta"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="Desc Corta"
        android:textSize="@dimen/txt_size"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="@dimen/txt_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/lblDesCorta" />

    <TextView
        android:id="@+id/lblDesLarga"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/desc_larga"
        android:textSize="@dimen/label_size"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="@dimen/lbl_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/tvDesCorta" />

    <TextView
        android:id="@+id/tvDesLarga"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="Desc Larga"
        android:textSize="@dimen/txt_size"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="@dimen/txt_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/lblDesLarga" />

    <TextView
        android:id="@+id/lblMarca"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/marca"
        android:textSize="@dimen/label_size"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="@dimen/lbl_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/tvDesLarga" />

    <TextView
        android:id="@+id/tvMarca"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="Marc"
        android:textSize="@dimen/txt_size"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="@dimen/txt_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/lblMarca" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_trash_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:layout_marginEnd="@dimen/btn_margin" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_pencil_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/btn_margin"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginStart="@dimen/btn_margin" />

</android.support.constraint.ConstraintLayout>
